# DriveStation

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  events.rs  lib.rs  log_writer.rs  logging.rs  main.rs  network.rs  system_info.rs
src-tauri/src/commands/: config.rs  gamepad.rs  mod.rs  robot.rs
src-tauri/src/gamepad/: manager.rs  mapping.rs  mod.rs
src-tauri/src/protocol/: connection.rs  types.rs
src/components/: Charts.tsx  CompactBar.tsx  Console.tsx  StatusBar.tsx  UpdateChecker.tsx
src/components/common/: ModeButton.tsx  StatusLED.tsx
src/components/tabs/: DiagnosticsTab.tsx  OperationTab.tsx  PowerTab.tsx  SetupTab.tsx  USBDevicesTab.tsx
src/hooks/: useCompactMode.ts  useGamepad.ts  useMatchTimer.ts  useTauriEvents.ts
src/stores/: gamepadStore.ts  logStore.ts  powerStore.ts  robotStore.ts  systemStore.ts  windowStore.ts
src/styles/: globals.css
tools/: fake_console.py
