[package]
name = "drivestation"
version = "0.2.3"
edition = "2021"
description = "Cross-platform FRC Driver Station"

[lib]
name = "drivestation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
gilrs = "0.11"
mdns-sd = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
byteorder = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
battery = "0.7"
if-addrs = "0.13"
